--- a/exemples/cube.css
+++ b/exemples/cube.css
@@ -1,57 +1,69 @@
 .perspective { perspective: 800px; perspective-origin: 50% 50%; }
 .perspective.flat { perspective: none; perspective-origin: 0 0; }
-.volume {
+volume {
 	display: inline-block;
 	transform-style: preserve-3d;
 	animation-duration: 10s;
 	animation-iteration-count: infinite;
 	animation-direction: normal;
+	--bg-color: #FAE8;
+	--bg-image: none;
 	--long-x: 200px;
 	--long-y: 150px;
 	--long-z: 170px;
 	--arrondi-nb: 30;
 	--arrondi: calc(1%* var(--arrondi-nb));
+	width: var(--long-x);
 }
-.volume >* {
+volume >*, volume > *:after, volume > *:before {
+	width: inherit; height: inherit;
+	background-color: var(--bg-color);
+	background-image: var(--bg-image);
+	text-align: center;
 	position: absolute;
 	transform-style: preserve-3d;
 	transform-origin: center center;
-	text-align: center;
+}
+volume >* {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	font-size: 1em;
 }
-/* le cube. ordre des faces: haut, bas, gauche, droite, derrière, devant.
-préciser cube { width et height, ainsi que --long-x }. ils doivent être identiques */
-/* la brique. ordre des faces: haut, bas, gauche, droite, derrière, devant */
-.brique { width: var(--long-x); height: var(--long-y); }
-.brique > *:nth-child(1) {
-	width: var(--long-x); height: var(--long-z);
+volume > *:nth-child(1) { transform-origin: top center; }
+volume > *:nth-child(2) { transform-origin: bottom center; }
+volume > *:nth-child(3) { transform-origin: center left; }
+volume > *:nth-child(4) { transform-origin: center right; }
+/* le cube. ordre des faces: haut, bas, gauche, droite, derrière, devant */
+.cube { height: var(--long-x); }
+.cube > *:nth-child(1) { transform: rotateX(90deg) translateY(-50%); }
+.cube > *:nth-child(2) { transform: rotateX(-90deg) translateY(50%); }
+.cube > *:nth-child(3) { transform: rotateY(270deg) translateX(-50%); }
+.cube > *:nth-child(4) { transform: rotateY(-270deg) translateX(50%); }
+.cube > *:nth-child(5) { transform: translateZ(calc(-0.5* var(--long-x))) rotateY(180deg); }
+.cube > *:nth-child(6) { transform: translateZ(calc(0.5* var(--long-x))); }
+/* la pave. ordre des faces: haut, bas, gauche, droite, derrière, devant */
+.pave { height: var(--long-y); }
+.pave > *:nth-child(1) {
+	height: var(--long-z);
 	transform: rotateX(90deg) translateY(calc(-0.5* var(--long-z)));
 }
-.brique > *:nth-child(2) {
-	width: var(--long-x); height: var(--long-z);
+.pave > *:nth-child(2) {
+	height: var(--long-z);
 	transform: rotateX(-90deg) translateY(calc(0.5* var(--long-z))) translateZ(calc(var(--long-y) - var(--long-z)));
 }
-.brique > *:nth-child(3) {
-	width: var(--long-z); height: var(--long-y);
+.pave > *:nth-child(3) {
+	width: var(--long-z);
 	transform: rotateY(270deg) translateX(-50%);
 }
-.brique > *:nth-child(4) {
-	width: var(--long-z); height: var(--long-y);
+.pave > *:nth-child(4) {
+	width: var(--long-z);
 	transform: rotateY(-270deg) translateX(50%) translateZ(calc(var(--long-x) - var(--long-z)));
 }
-.brique > *:nth-child(5) {
-	width: var(--long-x); height: var(--long-y);
-	transform: rotateY(180deg) translateZ(calc(0.5* var(--long-z)));
-}
-.brique > *:nth-child(6) {
-	width: var(--long-x); height: var(--long-y);
-	transform: translateZ(calc(0.5* var(--long-z)));
-}
-/* l'arrondi, à rajouter par-dessus le cube ou la brique */
+.pave > *:nth-child(5) { transform: rotateY(180deg) translateZ(calc(0.5* var(--long-z))); }
+.pave > *:nth-child(6) { transform: translateZ(calc(0.5* var(--long-z))); }
+/* l'arrondi, à rajouter par-dessus le cube ou la pave */
 .arrondi > *:nth-child(-1n+2) { border-radius: var(--arrondi); }
 .arrondi > *:nth-child(3) { transform: rotateY(270deg) translateX(-50%) translateZ(calc(var(--long-x) * var(--arrondi-nb) /100)); }
 .arrondi > *:nth-child(4) { transform: rotateY(-270deg) translateX(50%) translateZ(calc(var(--long-x) * var(--arrondi-nb) /100)); }
@@ -77,7 +89,7 @@ préciser cube { width et height, ainsi que --long-x }. ils doivent être identi
 	left: calc(var(--arrondi-nb) * var(--long-x) /-200);
 	transform: rotateY(-20deg);
 }
-.brique.arrondi > *:before, .brique.arrondi > *:after { height: var(--long-y); }
+.pave.arrondi > *:before, .pave.arrondi > *:after { height: var(--long-y); }
 /* le toblerone. ordre des faces: haut, bas, gauche, droite, derrière */
 .toblerone, .toblerone >* { width: var(--long-x); height: var(--long-x); }
 .toblerone > *:nth-child(1) {
@@ -100,9 +112,9 @@ préciser cube { width et height, ainsi que --long-x }. ils doivent être identi
 }
 .toblerone > *:nth-child(5) { transform: translateZ(calc(-0.5* var(--long-x))) rotateY(180deg); }
 /* le cylindre. ordre des faces: haut, bas, cotés */
-.cylindre { width: var(--long-x); height: var(--long-y); }
+.cylindre { height: var(--long-y); }
 .cylindre > *:nth-child(-1n+2) {
-	width: var(--long-x); height: var(--long-x);
+	height: var(--long-x);
 	border-radius: 50%;
 }
 .cylindre > *:nth-child(1) { transform: rotateX(90deg) translateY(-50%); }
@@ -125,14 +137,14 @@ préciser cube { width et height, ainsi que --long-x }. ils doivent être identi
 .cylindre > *:nth-child(14) { transform: translateX(505.56%) rotateY(330deg) translateZ(calc(var(--long-x) /2)); }
 /* les annimations */
 @keyframes cube-spin-horizontally { to { transform: rotateY(360deg); }}
-.volume.horizontal { animation-name: cube-spin-horizontally; }
+volume.horizontal { animation-name: cube-spin-horizontally; }
 @keyframes cube-spin-vertically { to { transform: rotateX(360deg); }}
-.volume.vertical {
+volume.vertical {
 	animation-name: cube-spin-vertically;
 	transform-origin: 0 100px;
 }
 @keyframes cube-spin-full { to { transform: rotateX(360deg) rotateY(360deg); }}
-.volume.full, cube.full {
+volume.full {
 	animation-name: cube-spin-full;
 	transform-origin: 50px 100px;
 }
