--- a/exemples/cube.css
+++ b/exemples/cube.css
@@ -1,6 +1,6 @@
 cadre {
 	display: block;
-	perspective: 800px; perspective-origin: 50% 50%;
+	perspective: 800px; perspective-origin: 50% 4em;
 }
 cadre.flat { perspective: none; perspective-origin: 0 0; }
 volume {
@@ -11,16 +11,16 @@ volume {
 	animation-direction: normal;
 	--bg-color: #FAE8;
 	--bg-image: none;
+	--border: none;
 	--long-x: 200px;
-	--long-y: 150px;
+	--long-y: 100px;
 	--long-z: 170px;
-	--arrondi-nb: 30;
-	--arrondi: calc(1%* var(--arrondi-nb));
 	width: var(--long-x);
 	height: var(--long-y);
 }
 volume >* {
 	text-align: center;
+	border: var(--border);
 /*	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -34,122 +34,55 @@ volume >*, volume > *:after, volume > *:before {
 	transform-style: preserve-3d;
 	transform-origin: center center;
 }
-volume > *:nth-child(1) { transform-origin: top center; }
-volume > *:nth-child(2) { transform-origin: bottom center; }
-volume > *:nth-child(3) { transform-origin: center left; }
-volume > *:nth-child(4) { transform-origin: center right; }
-/* le cube. ordre des faces: haut, bas, gauche, droite, derrière, devant */
-.cube { height: var(--long-x); }
-.cube > *:nth-child(1) { transform: rotateX(90deg) translateY(-50%); }
-.cube > *:nth-child(2) { transform: rotateX(-90deg) translateY(50%); }
-.cube > *:nth-child(3) { transform: rotateY(270deg) translateX(-50%); }
-.cube > *:nth-child(4) { transform: rotateY(-270deg) translateX(50%); }
-.cube > *:nth-child(5) { transform: translateZ(calc(-0.5* var(--long-x))) rotateY(180deg); }
-.cube > *:nth-child(6) { transform: translateZ(calc(0.5* var(--long-x))); }
-/* le pave. ordre des faces: haut, bas, gauche, droite, derrière, devant */
-.pave { height: var(--long-y); }
-.pave > *:nth-child(1) {
-	height: var(--long-z);
-	transform: rotateX(90deg) translateY(calc(-0.5* var(--long-z)));
-}
-.pave > *:nth-child(2) {
-	height: var(--long-z);
-	transform: rotateX(-90deg) translateY(calc(0.5* var(--long-z))) translateZ(calc(var(--long-y) - var(--long-z)));
-}
-.pave > *:nth-child(3) {
-	width: var(--long-z);
+/* le pave. ordre des faces: gauche, droite, devant, derrière, bas, haut */
+volume.pave > *:nth-child(1), volume.pave > *:nth-child(2), volume.maison > *:nth-child(1), volume.maison > *:nth-child(2) { width: var(--long-z); }
+volume.pave > *:nth-child(1), volume.maison > *:nth-child(1) {
+	transform-origin: center left;
 	transform: rotateY(270deg) translateX(-50%);
 }
-.pave > *:nth-child(4) {
-	width: var(--long-z);
+volume.pave > *:nth-child(2), volume.maison > *:nth-child(2) {
+	transform-origin: center right;
 	transform: rotateY(-270deg) translateX(50%) translateZ(calc(var(--long-x) - var(--long-z)));
 }
-.pave > *:nth-child(5) { transform: rotateY(180deg) translateZ(calc(0.5* var(--long-z))); }
-.pave > *:nth-child(6) { transform: translateZ(calc(0.5* var(--long-z))); }
-/* l'arrondi, à rajouter par-dessus le cube ou la pave */
-.arrondi > *:nth-child(-1n+2) { border-radius: var(--arrondi); }
-.arrondi > *:nth-child(3) { transform: rotateY(270deg) translateX(-50%) translateZ(calc(var(--long-x) * var(--arrondi-nb) /100)); }
-.arrondi > *:nth-child(4) { transform: rotateY(-270deg) translateX(50%) translateZ(calc(var(--long-x) * var(--arrondi-nb) /100)); }
-.arrondi > *:nth-child(n+3) {
-	width: calc(100% - 2* var(--arrondi));
-	right: var(--arrondi);
+volume.pave > *:nth-child(3), volume.maison > *:nth-child(3) { transform: translateZ(calc(var(--long-z) /2)); }
+volume.pave > *:nth-child(4), volume.maison > *:nth-child(4) { transform: rotateY(180deg) translateZ(calc(var(--long-z) /2)); }
+volume.pave > *:nth-child(5), volume.pave > *:nth-child(6), volume.maison > *:nth-child(5) { height: var(--long-z); }
+volume.pave > *:nth-child(5), volume.maison > *:nth-child(5) {
+	transform-origin: bottom center;
+	transform: rotateX(-90deg) translateY(calc(var(--long-z) /2)) translateZ(calc(var(--long-y) - var(--long-z)));
 }
-.arrondi > *:before, .arrondi > *:after {
-	content: "";
-	width: calc(var(--arrondi-nb) * var(--long-x) /200);
-}
-.arrondi > *:nth-child(-1n+2):before {
-	transform: rotateX(90deg) rotateY(45deg) translateY(-50%) translateZ(calc(var(--long-x) / (1.4142 + var(--arrondi-nb) * 0.011716))); }
-.arrondi > *:nth-child(-1n+2):after {
-	transform: rotateX(90deg) rotateY(45deg) translateY(-50%) translateZ(calc(var(--long-x) / (-1.4142 - var(--arrondi-nb) * 0.011716))); }
-.arrondi > *:nth-child(n+3):before {
-	transform-origin: center left;
-	right: calc(var(--arrondi-nb) * var(--long-x) /-200);
-	transform: rotateY(20deg);
-}
-.arrondi > *:nth-child(n+3):after {
-	transform-origin: center right;
-	left: calc(var(--arrondi-nb) * var(--long-x) /-200);
-	transform: rotateY(-20deg);
-}
-.pave.arrondi > *:before, .pave.arrondi > *:after { height: var(--long-y); }
-
-/* le toblerone. ordre des faces: haut, bas, gauche, droite, derrière */
-.toblerone, .toblerone >* { width: var(--long-x); height: var(--long-x); }
-.toblerone > *:nth-child(1) {
-	height: 50%;
-	transform: rotateX(90deg) translateY(-100%);
-	clip-path: polygon(0 0, 50% 100%, 100% 0);
-}
-.toblerone > *:nth-child(2) {
-	height: 50%;
-	transform: rotateX(-90deg) translateY(100%) translateZ(calc(var(--long-x) /2));
-	clip-path: polygon(0 100%, 50% 0, 100% 100%);
-}
-.toblerone > *:nth-child(3) {
-	width: 70.71%;
-	transform: translateZ(calc(var(--long-x) /-2)) rotateY(-45deg);
-}
-.toblerone > *:nth-child(4) {
-	width: 70.71%;
-	transform: translateX(calc(0.2875 * var(--long-x))) translateZ(calc(var(--long-x) /-2)) rotateY(45deg);
-}
-.toblerone > *:nth-child(5) { transform: translateZ(calc(-0.5* var(--long-x))) rotateY(180deg); }
-
-/* le toit (toblerone allongé). ordre des faces: bas, gauche, droite, devant, derrière */
-.toit, .toit >* { width: var(--long-x); height: var(--long-y); }
-.toit > *:nth-child(1) { transform: rotateX(270deg) translateY(-50%) translateZ(var(--long-y)); }
-.toit > *:nth-child(2), .toit > *:nth-child(3) {
-	height: 50%;
-	clip-path: polygon(0 100%, 50% 0, 100% 100%);
-	width: var(--long-y);
-}
-.toit > *:nth-child(2) { transform: rotateY(270deg) translateZ(calc(0.5* var(--long-y))) translateY(100%); }
-.toit > *:nth-child(3) { transform: rotateY(90deg) translateZ(var(--long-x)) translateX(-50%) translateY(100%); }
-.toit > *:nth-child(4), .toit > *:nth-child(5) {
-	height: calc(0.7071 * var(--long-y));
+volume.pave > *:nth-child(6) {
 	transform-origin: top center;
+	transform: rotateX(90deg) translateY(calc(var(--long-z) /-2));
 }
-.toit > *:nth-child(4) { transform: rotateX(45deg) translateY(50%) translateZ(calc(-0.35355 * var(--long-y))); }
-.toit > *:nth-child(5) { transform: rotateX(-45deg) rotateY(180deg) translateY(50%) translateZ(calc(-0.35355 * var(--long-y))); }
-
-/* le cylindre. ordre des faces: haut, bas, cotés */
+/* le cylindre. ordre des faces: bas, haut, cotés */
 .cylindre { height: var(--long-y); }
 .cylindre > *:nth-child(-1n+2) {
 	height: var(--long-x);
 	border-radius: 50%;
 }
-.cylindre > *:nth-child(1) { transform: rotateX(90deg) translateY(-50%); }
-.cylindre > *:nth-child(2) { transform: rotateX(-90deg) translateY(50%) translateZ(calc(var(--long-y) - var(--long-x))); }
+.cylindre > *:nth-child(1) {
+	transform-origin: bottom center;
+	transform: rotateX(-90deg) translate3d(0, 50%, calc(var(--long-y) - var(--long-x)));
+}
+.cylindre > *:nth-child(2) {
+	transform-origin: top center;
+	transform: rotateX(90deg) translateY(-50%);
+}
 .cylindre > *:nth-child(n+3) {
+	transform-origin: center center;
 	display: inline;
 	width: calc(0.09* var(--long-x));
 	height: var(--long-y);
-	transform-origin: center center;
 }
-.cylindre > *:nth-child(n+3):before, .cylindre > *:nth-child(n+3):after { content: ""; }
+.cylindre > *:nth-child(n+3):before, .cylindre > *:nth-child(n+3):after {
+	content: "";
+	background-color: cadetblue;
+}
 .cylindre > *:nth-child(n+3):before { transform-origin: center left; transform: translateX(50%) rotateY(10deg); }
 .cylindre > *:nth-child(n+3):after { transform-origin: center right; transform: translateX(-150%) rotateY(-10deg); }
+/*
+.cylindre > *:nth-child(3) { transform: translateX(505.56%) translateZ(calc(var(--long-x) /2)); }
 .cylindre > *:nth-child(3) { transform: translateX(505.56%) translateZ(calc(var(--long-x) /2)); }
 .cylindre > *:nth-child(4) { transform: translateX(505.56%) rotateY(30deg) translateZ(calc(var(--long-x) /2)); }
 .cylindre > *:nth-child(5) { transform: translateX(505.56%) rotateY(60deg) translateZ(calc(var(--long-x) /2)); }
@@ -162,80 +95,16 @@ volume > *:nth-child(4) { transform-origin: center right; }
 .cylindre > *:nth-child(12) { transform: translateX(505.56%) rotateY(270deg) translateZ(calc(var(--long-x) /2)); }
 .cylindre > *:nth-child(13) { transform: translateX(505.56%) rotateY(300deg) translateZ(calc(var(--long-x) /2)); }
 .cylindre > *:nth-child(14) { transform: translateX(505.56%) rotateY(330deg) translateZ(calc(var(--long-x) /2)); }
+*/
 /* les annimations */
 @keyframes volume-spin-y { to { transform: rotateY(360deg); }}
-volume.spin-x { animation-name: volume-spin-y; }
+volume.spin-x { animation-name: volume-spin-x; }
 @keyframes volume-spin-x { to { transform: rotateX(360deg); }}
-volume.spin-y {
-	animation-name: volume-spin-y;
-	transform-origin: 0 100px;
-}
+volume.spin-y { animation-name: volume-spin-y; }
 @keyframes volume-spin-z { to { transform: rotateZ(360deg); }}
 volume.spin-z { animation-name: volume-spin-z; }
-@keyframes volume-spin-full { to { transform: rotateX(360deg) rotateY(360deg); }}
-volume.full {
-	animation-name: volume-spin-full;
+@keyframes volume-spin-xy { to { transform: rotateX(360deg) rotateY(360deg); }}
+volume.spin-xy {
+	animation-name: volume-spin-xy;
 	transform-origin: 50px 100px;
-}
-/* la boule */
-.ball {
-	/* préciser width, height et background-color */
-	border-radius: 50%;
-	background-image: radial-gradient(circle at 20% 50%, transparent, #0003);
-	animation-duration: 1s;
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	font-size: 1em;
-}
-.ball.horizontal { animation-name: ball-spin-y; }
-.ball.vertical { animation-name: ball-spin-x; }
-@keyframes ball-spin-y {
-	0% { background-image: radial-gradient(circle at 0% 50%, transparent, #0003); }
-	5% { background-image: radial-gradient(circle at 5% 50%, transparent, #0003); }
-	10% { background-image: radial-gradient(circle at 10% 50%, transparent, #0003); }
-	15% { background-image: radial-gradient(circle at 15% 50%, transparent, #0003); }
-	20% { background-image: radial-gradient(circle at 20% 50%, transparent, #0003); }
-	25% { background-image: radial-gradient(circle at 25% 50%, transparent, #0003); }
-	30% { background-image: radial-gradient(circle at 30% 50%, transparent, #0003); }
-	35% { background-image: radial-gradient(circle at 35% 50%, transparent, #0003); }
-	40% { background-image: radial-gradient(circle at 40% 50%, transparent, #0003); }
-	45% { background-image: radial-gradient(circle at 45% 50%, transparent, #0003); }
-	50% { background-image: radial-gradient(circle at 50% 50%, transparent, #0003); }
-	55% { background-image: radial-gradient(circle at 55% 50%, transparent, #0003); }
-	60% { background-image: radial-gradient(circle at 60% 50%, transparent, #0003); }
-	65% { background-image: radial-gradient(circle at 65% 50%, transparent, #0003); }
-	70% { background-image: radial-gradient(circle at 70% 50%, transparent, #0003); }
-	75% { background-image: radial-gradient(circle at 75% 50%, transparent, #0003); }
-	80% { background-image: radial-gradient(circle at 80% 50%, transparent, #0003); }
-	85% { background-image: radial-gradient(circle at 85% 50%, transparent, #0003); }
-	90% { background-image: radial-gradient(circle at 90% 50%, transparent, #0003); }
-	95% { background-image: radial-gradient(circle at 95% 50%, transparent, #0003); }
-	100% { background-image: radial-gradient(circle at 100% 50%, transparent, #0003); }
-}
-@keyframes ball-spin-x {
-	0% { background-image: radial-gradient(circle at 50% 0%, transparent, #0003); }
-	5% { background-image: radial-gradient(circle at 50% 5%, transparent, #0003); }
-	10% { background-image: radial-gradient(circle at 50% 10%, transparent, #0003); }
-	15% { background-image: radial-gradient(circle at 50% 15%, transparent, #0003); }
-	20% { background-image: radial-gradient(circle at 50% 20%, transparent, #0003); }
-	25% { background-image: radial-gradient(circle at 50% 25%, transparent, #0003); }
-	30% { background-image: radial-gradient(circle at 50% 30%, transparent, #0003); }
-	35% { background-image: radial-gradient(circle at 50% 35%, transparent, #0003); }
-	40% { background-image: radial-gradient(circle at 50% 40%, transparent, #0003); }
-	45% { background-image: radial-gradient(circle at 50% 45%, transparent, #0003); }
-	50% { background-image: radial-gradient(circle at 50% 50%, transparent, #0003); }
-	55% { background-image: radial-gradient(circle at 50% 55%, transparent, #0003); }
-	60% { background-image: radial-gradient(circle at 50% 60%, transparent, #0003); }
-	65% { background-image: radial-gradient(circle at 50% 65%, transparent, #0003); }
-	70% { background-image: radial-gradient(circle at 50% 70%, transparent, #0003); }
-	75% { background-image: radial-gradient(circle at 50% 75%, transparent, #0003); }
-	80% { background-image: radial-gradient(circle at 50% 80%, transparent, #0003); }
-	85% { background-image: radial-gradient(circle at 50% 85%, transparent, #0003); }
-	90% { background-image: radial-gradient(circle at 50% 90%, transparent, #0003); }
-	95% { background-image: radial-gradient(circle at 50% 95%, transparent, #0003); }
-	100% { background-image: radial-gradient(circle at 50% 100%, transparent, #0003); }
 }
