--- a/exemples/cube.css
+++ b/exemples/cube.css
@@ -1,6 +1,6 @@
 cadre {
 	display: block;
-	perspective: 800px; perspective-origin: 50% 4em;
+	perspective: 800px; perspective-origin: 10% 4em;
 }
 cadre.flat { perspective: none; perspective-origin: 0 0; }
 volume {
@@ -18,19 +18,13 @@ volume {
 	width: var(--long-x);
 	height: var(--long-y);
 }
-volume >* {
-	text-align: center;
-	border: var(--border);
-/*	display: flex;
-	flex-direction: column;
-	justify-content: center;
-*/}
 volume >*, volume > *:after, volume > *:before {
+	position: absolute;
 	width: inherit; height: inherit;
 	background-color: var(--bg-color);
 	background-image: var(--bg-image);
+	border: var(--border);
 	text-align: center;
-	position: absolute;
 	transform-style: preserve-3d;
 	transform-origin: center center;
 }
@@ -55,47 +49,114 @@ volume.pave > *:nth-child(6) {
 	transform-origin: top center;
 	transform: rotateX(90deg) translateY(calc(var(--long-z) /-2));
 }
+/* la pyramide. ordre des faces: bas, devant, derrière, gauche, droite */
+volume.pyramide, volume.pyramide >* { height: calc(var(--long-x) /1.4142); }
+volume.pyramide >* {
+	clip-path: polygon(0 100%, 50% 0, 100% 100%);
+	transform-origin: bottom center;
+}
+volume.pyramide > *:nth-child(1) {
+	height: var(--long-x);
+	transform: rotateX(90deg) translateZ(calc(var(--long-x) * 0.4142 / 1.4142));
+	clip-path: none;
+}
+volume.pyramide > *:nth-child(2) { transform: rotateX(45deg); }
+volume.pyramide > *:nth-child(3) { transform: rotateY(180deg) translateZ(var(--long-x)) rotateX(45deg); }
+volume.pyramide > *:nth-child(4) { transform: rotateY(270deg) translate3d(-50%, 0, calc(var(--long-x) /2)) rotateX(45deg); }
+volume.pyramide > *:nth-child(5) { transform: rotateY(90deg) translate3d(50%, 0, calc(var(--long-x) /2)) rotateX(45deg); }
+/* le toit. ordre des faces: gauche, droite, devant, derrière, bas */
+volume.toit >*:nth-child(1){ transform: rotateY(270deg) translateX(-50%); }
+volume.toit >*:nth-child(2){ transform: rotateY(90deg) translate3d(-50%, 0, var(--long-x)); }
+volume.toit >*:nth-child(3) { transform: rotateX(45deg); }
+volume.toit >*:nth-child(4) { transform: rotateY(180deg) rotateX(45deg); }
+volume.toit > *:nth-child(5) {
+	height: var(--long-z);
+	transform-origin: center center;
+	transform: rotateX(-90deg);
+}
+volume.toit >*:nth-child(1), volume.toit >*:nth-child(2), volume.maison >*:nth-child(6), volume.maison >*:nth-child(7){
+	transform-origin: top left;
+	clip-path: polygon(0 100%, 50% 0, 100% 100%);
+	width: var(--long-z);
+	height: calc(var(--long-z) /2);
+}
+volume.toit >*:nth-child(3), volume.toit >*:nth-child(4), volume.maison >*:nth-child(8), volume.maison >*:nth-child(9){
+	transform-origin: top center;
+	height: calc(var(--long-z) /1.4142);
+}
+/* le toblerone. ordre des faces: haut, bas, dos gauche, droite */
+volume.toblerone >*:nth-child(1), volume.toblerone >*:nth-child(2){
+	width: var(--long-x);
+	height: calc(var(--long-x) /2);
+	transform-origin: top center;
+}
+volume.toblerone >*:nth-child(1){
+	clip-path: polygon(0 0, 50% 100%, 100% 0);
+	transform: rotateX(90deg);
+}
+volume.toblerone >*:nth-child(2){
+	clip-path: polygon(0 100%, 50% 0, 100% 100%);
+	transform: rotateX(270deg) translate3d(0, -100%, var(--long-y));
+}
+volume.toblerone >*:nth-child(4), volume.toblerone >*:nth-child(5){
+	width: calc(0.7071 * var(--long-x));
+	transform-origin: center left;
+}
+volume.toblerone >*:nth-child(4){ transform: rotateY(315deg); }
+volume.toblerone >*:nth-child(5){ transform: rotateY(45deg) translateZ(calc(var(--long-x) * 0.7071)); }
+/* la maison. ordre des façades: gauche, droite, devant, derrière, bas. ordre du toit: gauche, droite, devant, derrière, sol */
+volume.maison >*:nth-child(6){ transform: rotateY(270deg) translate(-50%, -100%); }
+volume.maison >*:nth-child(7){ transform: rotateY(90deg) translate3d(-50%, -100%, var(--long-x)); }
+volume.maison >*:nth-child(8) { transform: translateY(calc(var(--long-z) /-2)) rotateX(45deg); }
+volume.maison >*:nth-child(9) { transform: translateY(calc(var(--long-z) /-2)) rotateY(180deg) rotateX(45deg); }
+
 /* le cylindre. ordre des faces: bas, haut, cotés */
-.cylindre { height: var(--long-y); }
-.cylindre > *:nth-child(-1n+2) {
+volume.cylindre > *:nth-child(-1n+2), volume.cone > *:nth-child(1) {
 	height: var(--long-x);
 	border-radius: 50%;
-}
-.cylindre > *:nth-child(1) {
-	transform-origin: bottom center;
-	transform: rotateX(-90deg) translate3d(0, 50%, calc(var(--long-y) - var(--long-x)));
-}
-.cylindre > *:nth-child(2) {
 	transform-origin: top center;
-	transform: rotateX(90deg) translateY(-50%);
 }
-.cylindre > *:nth-child(n+3) {
-	transform-origin: center center;
-	display: inline;
-	width: calc(0.09* var(--long-x));
-	height: var(--long-y);
+volume.cylindre > *:nth-child(1) { transform: rotateX(90deg) translateY(-50%); }
+volume.cylindre > *:nth-child(2), volume.cone > *:nth-child(1) { transform: rotateX(-90deg) translate3d(0, -50%, var(--long-y)); }
+volume.cylindre > *:nth-child(n+3), volume.cylindre > *:nth-child(n+3):before, volume.cylindre > *:nth-child(n+3):after,
+volume.cone > *:nth-child(n+2), volume.cone > *:nth-child(n+2):before, volume.cone > *:nth-child(n+2):after { border: none; }
+volume.cylindre > *:nth-child(n+3):before, volume.cylindre > *:nth-child(n+3):after,
+volume.cone > *:nth-child(n+2):before, volume.cone > *:nth-child(n+2):after { content: ""; }
+volume.cylindre > *:nth-child(n+3):before { transform: translateX(-50%) rotateY(-30deg); }
+volume.cylindre > *:nth-child(n+3):after { transform: translateX(-50%) rotateY(30deg); }
+volume.cylindre > *:nth-child(4) { transform: rotateY(90deg); }
+volume.cylindre > *:nth-child(5) { transform: rotateY(120deg); }
+
+/* le cône. ordre des faces: bas, cotés */
+volume.cone > * { background-color: transparent; }
+volume.cone > *:nth-child(1) { background-color: var(--bg-color); }
+volume.cone > *:nth-child(n+2)::before, volume.cone > *:nth-child(n+2)::after {
+	clip-path: polygon(0 100%, 50% 0, 100% 100%);
+	background-color: var(--bg-color);
 }
-.cylindre > *:nth-child(n+3):before, .cylindre > *:nth-child(n+3):after {
-	content: "";
-	background-color: cadetblue;
-}
-.cylindre > *:nth-child(n+3):before { transform-origin: center left; transform: translateX(50%) rotateY(10deg); }
-.cylindre > *:nth-child(n+3):after { transform-origin: center right; transform: translateX(-150%) rotateY(-10deg); }
-/*
-.cylindre > *:nth-child(3) { transform: translateX(505.56%) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(3) { transform: translateX(505.56%) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(4) { transform: translateX(505.56%) rotateY(30deg) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(5) { transform: translateX(505.56%) rotateY(60deg) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(6) { transform: translateX(505.56%) rotateY(90deg) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(7) { transform: translateX(505.56%) rotateY(120deg) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(8) { transform: translateX(505.56%) rotateY(150deg) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(9) { transform: translateX(505.56%) rotateY(180deg) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(10) { transform: translateX(505.56%) rotateY(210deg) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(11) { transform: translateX(505.56%) rotateY(240deg) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(12) { transform: translateX(505.56%) rotateY(270deg) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(13) { transform: translateX(505.56%) rotateY(300deg) translateZ(calc(var(--long-x) /2)); }
-.cylindre > *:nth-child(14) { transform: translateX(505.56%) rotateY(330deg) translateZ(calc(var(--long-x) /2)); }
-*/
+volume.cone > *:nth-child(n+2):before { transform: translateX(-50%); }
+volume.cone > *:nth-child(n+2):after { transform: translateX(-50%) rotateY(30deg); }
+volume.cone > *:nth-child(3) { transform: rotateY(60deg); }
+volume.cone > *:nth-child(4) { transform: rotateY(120deg); }
+
+/* le cylindre. ordre des faces: bas, haut, cotés */
+volume.cylindre.va > *:nth-child(n+3), volume.cylindre.va > *:nth-child(n+3):before, volume.cylindre.va > *:nth-child(n+3):after { transform-style: preserve-3d; }
+volume.cylindre.va > *:nth-child(n+3) { width: calc(0.09* var(--long-x)); }
+volume.cylindre.va > *:nth-child(n+3):before, volume.cylindre.va > *:nth-child(n+3):after { content: ""; }
+volume.cylindre.va > *:nth-child(n+3):before { transform-origin: center left; transform: translateX(50%) rotateY(10deg); }
+volume.cylindre.va > *:nth-child(n+3):after { transform-origin: center right; transform: translateX(-150%) rotateY(-10deg); }
+volume.cylindre.va > *:nth-child(3) { transform: translateX(505.56%) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(4) { transform: translateX(505.56%) rotateY(30deg) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(5) { transform: translateX(505.56%) rotateY(60deg) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(6) { transform: translateX(505.56%) rotateY(90deg) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(7) { transform: translateX(505.56%) rotateY(120deg) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(8) { transform: translateX(505.56%) rotateY(150deg) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(9) { transform: translateX(505.56%) rotateY(180deg) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(10) { transform: translateX(505.56%) rotateY(210deg) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(11) { transform: translateX(505.56%) rotateY(240deg) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(12) { transform: translateX(505.56%) rotateY(270deg) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(13) { transform: translateX(505.56%) rotateY(300deg) translateZ(calc(var(--long-x) /2)); }
+volume.cylindre.va > *:nth-child(14) { transform: translateX(505.56%) rotateY(330deg) translateZ(calc(var(--long-x) /2)); }
 /* les annimations */
 @keyframes volume-spin-y { to { transform: rotateY(360deg); }}
 volume.spin-x { animation-name: volume-spin-x; }
@@ -107,4 +168,66 @@ volume.spin-z { animation-name: volume-spin-z; }
 volume.spin-xy {
 	animation-name: volume-spin-xy;
 	transform-origin: 50px 100px;
+}
+/* la boule */
+.ball {
+	/* préciser width, height et background-color */
+	border-radius: 50%;
+	background-image: radial-gradient(circle at 20% 50%, transparent, #0003);
+	animation-duration: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	font-size: 1em;
+}
+.ball.horizontal { animation-name: ball-spin-y; }
+.ball.vertical { animation-name: ball-spin-x; }
+@keyframes ball-spin-y {
+	0% { background-image: radial-gradient(circle at 0% 50%, transparent, #0003); }
+	5% { background-image: radial-gradient(circle at 5% 50%, transparent, #0003); }
+	10% { background-image: radial-gradient(circle at 10% 50%, transparent, #0003); }
+	15% { background-image: radial-gradient(circle at 15% 50%, transparent, #0003); }
+	20% { background-image: radial-gradient(circle at 20% 50%, transparent, #0003); }
+	25% { background-image: radial-gradient(circle at 25% 50%, transparent, #0003); }
+	30% { background-image: radial-gradient(circle at 30% 50%, transparent, #0003); }
+	35% { background-image: radial-gradient(circle at 35% 50%, transparent, #0003); }
+	40% { background-image: radial-gradient(circle at 40% 50%, transparent, #0003); }
+	45% { background-image: radial-gradient(circle at 45% 50%, transparent, #0003); }
+	50% { background-image: radial-gradient(circle at 50% 50%, transparent, #0003); }
+	55% { background-image: radial-gradient(circle at 55% 50%, transparent, #0003); }
+	60% { background-image: radial-gradient(circle at 60% 50%, transparent, #0003); }
+	65% { background-image: radial-gradient(circle at 65% 50%, transparent, #0003); }
+	70% { background-image: radial-gradient(circle at 70% 50%, transparent, #0003); }
+	75% { background-image: radial-gradient(circle at 75% 50%, transparent, #0003); }
+	80% { background-image: radial-gradient(circle at 80% 50%, transparent, #0003); }
+	85% { background-image: radial-gradient(circle at 85% 50%, transparent, #0003); }
+	90% { background-image: radial-gradient(circle at 90% 50%, transparent, #0003); }
+	95% { background-image: radial-gradient(circle at 95% 50%, transparent, #0003); }
+	100% { background-image: radial-gradient(circle at 100% 50%, transparent, #0003); }
+}
+@keyframes ball-spin-x {
+	0% { background-image: radial-gradient(circle at 50% 0%, transparent, #0003); }
+	5% { background-image: radial-gradient(circle at 50% 5%, transparent, #0003); }
+	10% { background-image: radial-gradient(circle at 50% 10%, transparent, #0003); }
+	15% { background-image: radial-gradient(circle at 50% 15%, transparent, #0003); }
+	20% { background-image: radial-gradient(circle at 50% 20%, transparent, #0003); }
+	25% { background-image: radial-gradient(circle at 50% 25%, transparent, #0003); }
+	30% { background-image: radial-gradient(circle at 50% 30%, transparent, #0003); }
+	35% { background-image: radial-gradient(circle at 50% 35%, transparent, #0003); }
+	40% { background-image: radial-gradient(circle at 50% 40%, transparent, #0003); }
+	45% { background-image: radial-gradient(circle at 50% 45%, transparent, #0003); }
+	50% { background-image: radial-gradient(circle at 50% 50%, transparent, #0003); }
+	55% { background-image: radial-gradient(circle at 50% 55%, transparent, #0003); }
+	60% { background-image: radial-gradient(circle at 50% 60%, transparent, #0003); }
+	65% { background-image: radial-gradient(circle at 50% 65%, transparent, #0003); }
+	70% { background-image: radial-gradient(circle at 50% 70%, transparent, #0003); }
+	75% { background-image: radial-gradient(circle at 50% 75%, transparent, #0003); }
+	80% { background-image: radial-gradient(circle at 50% 80%, transparent, #0003); }
+	85% { background-image: radial-gradient(circle at 50% 85%, transparent, #0003); }
+	90% { background-image: radial-gradient(circle at 50% 90%, transparent, #0003); }
+	95% { background-image: radial-gradient(circle at 50% 95%, transparent, #0003); }
+	100% { background-image: radial-gradient(circle at 50% 100%, transparent, #0003); }
 }
