--- a/we-clean-page/structure.css
+++ b/we-clean-page/structure.css
@@ -2,9 +2,8 @@
 :root {
 	--fond-color: #EEE;
 	--bord-color: #AAA;
-	--bord-epaisseur: 2px;
-	--bord-style: none;
 	--text-color: black;
+	--page-color: white;
 	--button-height: 2em;
 	--button-bg: #DDD;
 	--button-bg-hover: var(--button-bg, #DDD);
@@ -19,7 +18,7 @@ body, head, head > title {}
 body {
 	margin: auto;
 	padding: 0 0 1em 0;
-	background-color: white;
+	background-color: var(--page-color, white);
 	color: var(--text-color, black);
 	font-family: serif;
 	font-size: 1em;
@@ -29,7 +28,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-size: 1em;
-	line-height: 2em;
+	/* line-height: 2em; */
 	vertical-align: top;
 	font-family: inherit;
 	font-style: normal;
@@ -38,8 +37,8 @@ body {
 	color: inherit;
 	background: none;
 	outline: none;
-	border-width: var(--bord-epaisseur, 2px);
-	border-style: var(--bord-style, none);
+	border-width: 2px;
+	border-style: none;
 	border-color: var(--bord-color, #AAA);
 }
 *:first-letter { text-transform: uppercase; }
@@ -51,6 +50,10 @@ xmp {
 	border-style: dotted;
 	background-color: var(--fond-color, #EEE);
 	white-space: pre;
+}
+figure {
+	text-align: center;
+	margin-bottom: 1em;
 }
 p.indent-1 { margin-left: 2em; }
 p.indent-2 { margin-left: 4em; }
@@ -69,7 +72,7 @@ head > title, h1 {
 	text-align: center;
 	font-size: 2em;
 }
-h2 {
+h2, caption {
 	text-align: center;
 	font-size: 1.5em;
 }
@@ -85,7 +88,7 @@ a:hover { font-weight: bold }
 /* les boutons */
 button, input, select, textarea, nav a, a.button { padding: 0.4em; }
 button, input, select, textarea { outline: none; }
-button, a.button, nav a, input[type='button'], input[type='submit'], input[type='reset'], select {
+button, a.button, nav a, input[type='button'], input[type='submit'], input[type='reset'], input[type='file'], select {
 	text-align: center;
 	display: inline-block;
 	height: var(--button-height, 2em);
@@ -106,7 +109,7 @@ input[type='radio'], input[type='checkbox'], input[type='number'], input[type='d
 	-o-appearance: none;
 	-webkit-appearance: none;
 }
-textarea, input[type='text'], input[type='email'], input[type='number'], input[type='date'], input[type='time'] {
+textarea, input[type='text'], input[type='password'], input[type='email'], input[type='number'], input[type='date'], input[type='time'] {
 	width: 100%;
 	color: var(--text-color, black);
 	background-color: var(--fond-color, #EEE);
@@ -117,7 +120,10 @@ textarea, input[type='text'], input[type='email'], input[type='number'], input[t
 	color: var(--text-color, black);
 	opacity: 0.6;
 }
-textarea { height: 3em; }
+textarea {
+	height: 3em;
+	max-width: 100%;
+}
 /* les boutons radio */
 input[type='radio'], input[type='checkbox'] {
 	width: 1em;
@@ -135,29 +141,47 @@ nav {
 	margin: 0;
 }
 nav >* {
+	flex-basis: 1;
 	flex-grow: 1;
 	flex-shrink: 1;
 }
 /* les formules mathématiques */
 math { display: block; }
 mrow { font-size: 1em; }
-/* affichage pour les tablettes */
-@media (max-width: 992px){}
-/* affichage pour les smartphones */
-@media (max-width: 768px){
-	body.banner {
-		background: none;
-		padding-top: 0;
- }
-	img { max-width: 100%; }
-	img +*, .right +* { clear: right }
-	nav { flex-wrap: wrap }
+f {
+	margin: 0 0.2em;
+	vertical-align: middle;
+	display: inline-block;
+	text-align: center;
 }
-@media print{
-	body.banner {
-		background: none;
-		padding-top: 0;
- }
+f >*.d, f>*:last-child, f>d {
+	display: block;
+	border-width: 0.1em;
+	border-top-style: solid;
+}
+r {
+	display: inline-block;
+	transform: skew(-15deg);
+	transform-origin: bottom left;
+	padding-left: 0.1em;
+	margin-left: 0.7em;
+	margin-right: 0.2em;
+	border-width: 0.1em;
+	border-top-style: solid;
+	border-left-style: solid;
+}
+r:before {
+	content: "";
+	position: absolute;
+	height: 60%;
+	width: 0.5em;
+	left: -0.5em;
+	bottom: 0;
+	border-width: 0.1em;
+	border-right-style: solid;
+	border-top-style: solid;
+	transform: skew(30deg);
+	transform-origin: bottom right;
 }
 /* deux methodes pour faire une banniere */
 body.banner {
@@ -171,6 +195,24 @@ img#banner {
 	height: 10cm;
 	object-fit: cover;
 	margin: 0;
+}
+/* affichage pour les tablettes */
+@media (max-width: 992px){}
+/* affichage pour les smartphones */
+@media (max-width: 768px){
+	body.banner {
+		background-image: none;
+		padding-top: 0;
+	}
+	img { max-width: 100%; }
+	img +*, .right +* { clear: right }
+	nav { flex-wrap: wrap }
+}
+@media print{
+	body.banner {
+		background: none;
+		padding-top: 0;
+	}
 }
 /* pour mes pwa */
 button#install-pwa { display: none; }
